--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0-rc.7",
-    "@vue/cli-service": "^4.0.0-rc.7",
+    "@percy/puppeteer": "^1.0.8",
+    "@vue/cli-plugin-babel": "^4.0.4",
+    "@vue/cli-plugin-eslint": "^4.0.4",
+    "@vue/cli-plugin-unit-jest": "^4.0.4",
+    "@vue/cli-service": "^4.0.4",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "puppeteer": "^1.20.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
