--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^1.18.2",
     "puppeteer": "^1.20.0",
     "vue-template-compiler": "^2.6.10"
   },
