--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,9 @@ jobs:
       - uses: actions/setup-node@v1.1.2
         with:
           node-version: 11.x
-      - run: npm install prettier -g
-      - run: prettier --check "src/**/*.{js,json,yml,yaml,md}"
+      - run: npm install yarn -g
+      - run: yarn install
+      - run: node_modules/.bin/prettier --check "src/**/*.{js,json,yml,yaml,md}"
 
   html-validate:
     name: HTML-Validate
