--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 11.x
       - run: npm install yarn -g
       - run: yarn install
-      - run: node_modules/.bin/prettier --check "src/**/*.{js,json,yml,yaml,md}"
+      - run: yarn prettier:check
 
   html-validate:
     name: HTML-Validate
