--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:html": "NODE_ENV=test vue-cli-service html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
     "vue:serve": "yarn vue:start --open",
     "vue:start": "vue-cli-service serve",
-    "git:pull:template": "git pull template master --allow-unrelated-histories"
+    "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
+    "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories"
   },
   "dependencies": {
     "core-js": "^3.1.2",
