--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test:lint": "NODE_ENV=test vue-cli-service lint --max-warnings 0",
     "test:vue": "NODE_ENV=test vue-cli-service html-validate --config .github/.vue-validate.json --max-warnings 0",
     "test:html": "NODE_ENV=test vue-cli-service html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
+    "test:unit": "NODE_ENV=test vue-cli-service test:unit --reporters default --no-cache --verbose",
+    "test:unit:ci": "yarn test:unit --ci",
+    "test:unit:update": "yarn test:unit --updateSnapshot",
     "vue:serve": "yarn vue:start --open",
     "vue:start": "vue-cli-service serve",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
@@ -78,6 +81,57 @@
     "> 1%",
     "last 2 versions"
   ],
+  "jest": {
+    "verbose": false,
+    "reporters": [],
+    "coverageDirectory": "tests/unit/__coverage__",
+    "collectCoverage": false,
+    "collectCoverageFrom": [
+      "src/**/*.{js,vue}",
+      "!**/node_modules/**"
+    ],
+    "coverageReporters": [
+      "text",
+      "text-summary"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 35,
+        "functions": 5,
+        "lines": 38,
+        "statements": 36
+      }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "vue",
+      "jsx",
+      "json"
+    ],
+    "transform": {
+      "^.+\\.vue$": "vue-jest",
+      "^.+\\.yml$": "yaml-jest",
+      ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ],
+    "testMatch": [
+      "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
+    ],
+    "testURL": "http://localhost/",
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
