--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,13 @@ jobs:
       - uses: actions/setup-node@v1.1.2
         with:
           node-version: 11.x
+      - name: Cache Node Modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - run: npm install yarn -g
       - run: yarn install
       - run: yarn test:unit
