--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,8 +55,12 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.action == 'opened' || github.event.action == 'synchronize'
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1.1.2
+      - name: Git Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Setup Node
+        uses: actions/setup-node@v1.1.2
         with:
           node-version: 11.x
       - name: Cache Node Modules
