--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,7 +77,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
       - run: yarn test:unit
-      - run: yarn test:coverage
+      - run: yarn test:unit:coverage
   #
   # puppeteer:
   #   name: Puppeteer
