--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,19 +46,19 @@ jobs:
       - run: yarn build
       - run: yarn test:vue
       - run: yarn test:html
-  # jest:
-  #   name: Jest
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - uses: actions/setup-node@v1.1.2
-  #       with:
-  #         node-version: 11.x
-  #     - run: npm install yarn -g
-  #     - run: yarn install
-  #     - run: yarn test:unit
-  #     - run: yarn test:coverage
-  #
+
+  jest:
+    name: Jest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1.1.2
+        with:
+          node-version: 11.x
+      - run: npm install yarn -g
+      - run: yarn install
+      - run: yarn test:unit
+      - run: yarn test:coverage
   # puppeteer:
   #   name: Puppeteer
   #   runs-on: ubuntu-latest
