--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue:serve": "yarn vue:start --open",
     "vue:start": "vue-cli-service serve",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
+    "git:diff:template": "git remote update && git diff master remotes/template/master",
     "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories"
   },
   "dependencies": {
