--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,32 +6,10 @@ on:
       - master
 
 jobs:
-  lint:
-    name: ESLint
+  node-cache:
+    name: Node Modules Cache
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1.1.2
-        with:
-          node-version: 11.x
-      - run: npm install yarn -g
-      - run: yarn install
-      - run: yarn test:lint
-
-  prettier:
-    name: Prettier
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1.1.2
-        with:
-          node-version: 11.x
-      - run: npm install prettier -g
-      - run: prettier --check "src/**/*.{js,json,yml,yaml,md}"
-
-  html-validate:
-    name: HTML-Validate
-    runs-on: ubuntu-latest
+    if: github.event.action == 'opened' || github.event.action == 'synchronize'
     steps:
       - name: Git Checkout
         uses: actions/checkout@v1
@@ -41,8 +19,77 @@ jobs:
         uses: actions/setup-node@v1.1.2
         with:
           node-version: 11.x
+      - name: Cache Node Modules
+        id: cache
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
+      - name: Install Yarn
+        run: npm install yarn -g
+      - name: Install Node Modules with Yarn
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+  lint:
+    name: ESLint
+    runs-on: ubuntu-latest
+    needs: node-cache
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1.1.2
+        with:
+          node-version: 11.x
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
       - run: npm install yarn -g
       - run: yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
+      - run: yarn test:lint
+
+  prettier:
+    name: Prettier
+    runs-on: ubuntu-latest
+    needs: node-cache
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1.1.2
+        with:
+          node-version: 11.x
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
+      - run: npm install yarn -g
+      - run: yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
+      - run: yarn prettier:check
+
+  html-validate:
+    name: HTML-Validate
+    runs-on: ubuntu-latest
+    needs: node-cache
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Setup Node
+        uses: actions/setup-node@v1.1.2
+        with:
+          node-version: 11.x
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
+      - run: npm install yarn -g
+      - run: yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
       - run: yarn build
       - run: yarn test:vue
       - run: yarn test:html
@@ -50,13 +97,20 @@ jobs:
   jest:
     name: Jest
     runs-on: ubuntu-latest
+    needs: node-cache
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1.1.2
         with:
           node-version: 11.x
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: node_modules
+          key: node-${{ hashFiles('**/yarn.lock') }}
       - run: npm install yarn -g
       - run: yarn install
+        if: steps.cache.outputs.cache-hit != 'true'
       - run: yarn test:unit:ci
       - run: yarn test:unit:coverage
   # puppeteer:
