--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode production",
     "prettier": "node_modules/.bin/prettier 'src/**/*.{js,json,yml,yaml,md}'",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
@@ -14,8 +14,12 @@
     "test:unit:ci": "yarn test:unit --ci",
     "test:unit:update": "yarn test:unit --updateSnapshot",
     "test:unit:coverage": "NODE_ENV=test vue-cli-service test:unit --no-cache --coverage --silent --ci",
-    "vue:serve": "yarn vue:start --open",
+    "test:e2e": "NODE_ENV=test jest --config=tests/e2e/.jest.config.js",
+    "test:e2e:ci": "yarn test:e2e --ci --runInBand",
+    "test:e2e:percy": "RUN_PERCY=true percy exec -- yarn test:e2e:ci",
+    "test:e2e:update": "yarn test:e2e --updateSnapshot",
     "vue:start": "vue-cli-service serve",
+    "vue:serve": "yarn vue:start --open",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
     "git:diff:template": "git remote update && git diff master..remotes/template/master",
     "git:diff:template:ignore": "yarn git:diff:template -- . ':!tests' ':!src' ':!public' ':!README.md'",
@@ -43,7 +47,7 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "puppeteer": "^1.5.0",
+    "puppeteer": "^1.17.0",
     "vue-cli-plugin-html-validate": "^1.1.0",
     "vue-template-compiler": "^2.6.10",
     "yaml-jest": "^1.0.5"
