working on git diff

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,4 @@ jobs:
       - run: yarn test:html
       - run: yarn test:unit:ci
       - run: yarn test:unit:coverage
+      - run: yarn git:init && yarn git:diff:template:compact
