--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "vue:serve": "yarn vue:start --open",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
     "git:diff:template": "git remote update && git diff remotes/template/master",
-    "git:diff:template:ignore": "yarn git:diff:template -- . ':!tests' ':!src' ':!public' ':!README.md'",
-    "git:diff:template:compact": "yarn git:diff:template --compact-summary",
+    "git:diff:template:compact": "yarn git:diff:template --compact-summary . ':!*.svg' ':!*.spec.js*' ':!*.vue' ':!*.css.yml' ':!*.snap*' ':!*.lock' ':!src' ':!public' ':!tests/data'",
     "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories"
   },
   "dependencies": {
