--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   ci:
     name: CI Testing
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1
         with:
