Working on the e2e testing

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -30,3 +30,8 @@ jobs:
       - run: yarn test:html
       - run: yarn test:unit:ci
       - run: yarn test:unit:coverage
+      - run: yarn test:e2e:ci
+      - run: yarn test:e2e:percy
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          PERCY_BRANCH: master
