--- a/package.json
+++ b/package.json
@@ -26,28 +26,40 @@
     "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories"
   },
   "dependencies": {
+    "@babel/core": "^7.7.0",
     "core-js": "^3.3.6",
     "js-yaml-loader": "^1.2.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
+    "@percy/puppeteer": "^1.0.8",
     "@vue/cli-plugin-babel": "^4.0.5",
     "@vue/cli-plugin-eslint": "^4.0.5",
     "@vue/cli-plugin-router": "^4.0.5",
     "@vue/cli-plugin-unit-jest": "^4.0.5",
     "@vue/cli-service": "^4.0.5",
     "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "html-validate": "^1.13.0",
     "html-validate-vue": "^1.3.1",
     "husky": "^3.0.9",
+    "jest": "^24.8.0",
+    "jest-puppeteer": "^4.3.0",
+    "jest-screenshot": "^0.2.2",
     "lint-staged": "^9.4.2",
+    "netlify-cli": "^2.19.0",
     "prettier": "^1.18.2",
     "puppeteer": "^2.0.0",
     "vue-cli-plugin-html-validate": "^1.1.0",
+    "vue-cli-plugin-jest-puppeteer": "^0.1.4",
+    "vue-cli-plugin-netlify-lambda": "^0.1.1",
+    "vue-svg-loader": "^0.12.0",
     "vue-template-compiler": "^2.6.10",
     "yaml-jest": "^1.0.5"
   },
