--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   ci:
-    name: CI Testing
+    name: CI Tests
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1
