--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "private": true,
   "scripts": {
     "build": "vue-cli-service build --mode production",
+    "git:diff:template": "git remote update && git diff remotes/template/master",
+    "git:diff:template:compact": "yarn git:diff:template --compact-summary . ':!*.svg' ':!*.spec.js*' ':!*.vue' ':!*.css.yml' ':!*.snap*' ':!*.lock' ':!src' ':!public' ':!tests/data'",
+    "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
+    "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories",
     "prettier": "node_modules/.bin/prettier 'src/**/*.{js,json,yml,yaml,md}'",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
-    "test:lint": "NODE_ENV=test vue-cli-service lint --max-warnings 0",
-    "test:vue": "NODE_ENV=test vue-cli-service html-validate --config .github/.vue-validate.json --max-warnings 0",
-    "test:html": "NODE_ENV=test vue-cli-service html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
-    "test:unit": "NODE_ENV=test vue-cli-service test:unit --reporters default --no-cache --verbose",
-    "test:unit:ci": "yarn test:unit --ci",
-    "test:unit:update": "yarn test:unit --updateSnapshot",
-    "test:unit:coverage": "NODE_ENV=test vue-cli-service test:unit --no-cache --coverage --silent --ci",
     "test:e2e": "NODE_ENV=test jest --config=tests/e2e/.jest.config.js",
     "test:e2e:ci": "yarn test:e2e --ci --runInBand",
     "test:e2e:percy": "RUN_PERCY=true percy exec -- yarn test:e2e:ci",
     "test:e2e:update": "yarn test:e2e --updateSnapshot",
-    "vue:start": "vue-cli-service serve",
+    "test:html": "NODE_ENV=test vue-cli-service html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
+    "test:lint": "NODE_ENV=test vue-cli-service lint --max-warnings 0",
+    "test:unit": "NODE_ENV=test vue-cli-service test:unit --reporters default --no-cache --verbose",
+    "test:unit:ci": "yarn test:unit --ci",
+    "test:unit:coverage": "NODE_ENV=test vue-cli-service test:unit --no-cache --coverage --silent --ci",
+    "test:unit:update": "yarn test:unit --updateSnapshot",
+    "test:vue": "NODE_ENV=test vue-cli-service html-validate --config .github/.vue-validate.json --max-warnings 0",
     "vue:serve": "yarn vue:start --open",
-    "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
-    "git:diff:template": "git remote update && git diff remotes/template/master",
-    "git:diff:template:compact": "yarn git:diff:template --compact-summary . ':!*.svg' ':!*.spec.js*' ':!*.vue' ':!*.css.yml' ':!*.snap*' ':!*.lock' ':!src' ':!public' ':!tests/data'",
-    "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories"
+    "vue:start": "vue-cli-service serve"
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
