Got fauna working locally.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "prettier": "node_modules/.bin/prettier 'src/**/*.{js,json,yml,yaml,md}'",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
+    "netlify:init": "node_modules/.bin/netlify init",
+    "netlify:dev": "node_modules/.bin/netlify dev",
+    "netlify:functions:serve": "node_modules/.bin/netlify-lambda serve src/lambda",
+    "netlify:functions:install": "node_modules/.bin/netlify-lambda install src/lambda",
+    "netlify:functions:build": "node_modules/.bin/netlify-lambda build src/lambda",
     "test:e2e": "NODE_ENV=test jest --config=tests/e2e/.jest.config.js",
     "test:e2e:ci": "yarn test:e2e --ci --runInBand",
     "test:e2e:percy": "RUN_PERCY=true percy exec -- yarn test:e2e:ci",
@@ -53,7 +58,7 @@
     "jest-puppeteer": "^4.3.0",
     "jest-screenshot": "^0.2.2",
     "lint-staged": "^9.4.2",
-    "netlify-cli": "^2.19.0",
+    "netlify-cli": "^2.21.0",
     "prettier": "^1.19.1",
     "puppeteer": "^2.0.0",
     "vue-cli-plugin-html-validate": "^1.1.0",
