--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "yarn netlify:functions:install && yarn netlify:functions:build && yarn vue:build",
-    "serve": "yarn netlify:dev",
+    "build": "yarn netlify functions build && yarn vue build --mode production",
+    "serve": "yarn netlify dev",
     "git:diff:template": "git remote update && git diff remotes/template/master",
     "git:diff:template:compact": "yarn git:diff:template --compact-summary . ':!*.svg' ':!*.spec.js*' ':!*.vue' ':!*.css.yml' ':!*.snap*' ':!*.lock' ':!src' ':!public' ':!tests/data'",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
@@ -12,25 +12,23 @@
     "prettier": "node_modules/.bin/prettier 'src/**/*.{js,json,yml,yaml,md}'",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
-    "netlify:init": "node_modules/.bin/netlify init",
-    "netlify:dev": "node_modules/.bin/netlify dev",
-    "netlify:functions:serve": "node_modules/.bin/netlify-lambda serve src/lambda",
-    "netlify:functions:install": "node_modules/.bin/netlify-lambda install src/lambda",
-    "netlify:functions:build": "node_modules/.bin/netlify-lambda build src/lambda",
+    "netlify": "node_modules/.bin/netlify",
+    "netlify-lambda": "node_modules/.bin/netlify-lambda",
+    "netlify:functions:install": "yarn netlify-lambda install src/lambda",
+    "netlify:functions:build": "yarn netlify-lambda build src/lambda",
     "test:e2e": "NODE_ENV=test jest --config=tests/e2e/.jest.config.js",
     "test:e2e:ci": "yarn test:e2e --ci --runInBand",
     "test:e2e:percy": "RUN_PERCY=true percy exec -- yarn test:e2e:ci",
     "test:e2e:update": "yarn test:e2e --updateSnapshot",
-    "test:html": "NODE_ENV=test vue-cli-service html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
-    "test:lint": "NODE_ENV=test vue-cli-service lint --max-warnings 0",
-    "test:unit": "NODE_ENV=test vue-cli-service test:unit --reporters default --no-cache --verbose",
+    "test:html": "yarn vue:test html-validate --config .github/.html-validate.json --max-warnings 0 --ext html ./dist",
+    "test:lint": "yarn vue:test lint --max-warnings 0",
+    "test:unit": "yarn vue:test test:unit --reporters default --no-cache --verbose",
     "test:unit:ci": "yarn test:unit --ci",
-    "test:unit:coverage": "NODE_ENV=test vue-cli-service test:unit --no-cache --coverage --silent --ci",
+    "test:unit:coverage": "yarn vue:test test:unit --no-cache --coverage --silent --ci",
     "test:unit:update": "yarn test:unit --updateSnapshot",
-    "test:vue": "NODE_ENV=test vue-cli-service html-validate --config .github/.vue-validate.json --max-warnings 0",
-    "vue:build": "vue-cli-service build --mode production",
-    "vue:serve": "yarn vue:start --open",
-    "vue:start": "vue-cli-service serve"
+    "test:vue": "yarn vue:test html-validate --config .github/.vue-validate.json --max-warnings 0",
+    "vue": "vue-cli-service",
+    "vue:test": "NODE_ENV=test vue-cli-service"
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
