--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "yarn netlify functions build && yarn vue build --mode production",
     "serve": "yarn netlify dev",
+    "build": "yarn netlify functions:build && yarn vue build --mode production",
     "git:diff:template": "git remote update && git diff remotes/template/master",
     "git:diff:template:compact": "yarn git:diff:template --compact-summary . ':!*.svg' ':!*.spec.js*' ':!*.vue' ':!*.css.yml' ':!*.snap*' ':!*.lock' ':!src' ':!public' ':!tests/data'",
     "git:init": "git remote add template git@github.com:ryanjwilke/vue-cli-template.git",
     "git:pull:template": "git fetch --all && git pull template master --allow-unrelated-histories",
+    "netlify": "node_modules/.bin/netlify",
+    "netlify-lambda": "node_modules/.bin/netlify-lambda",
+    "netlify:functions:build": "yarn netlify-lambda build src/lambda",
+    "netlify:functions:install": "yarn netlify-lambda install src/lambda",
     "prettier": "node_modules/.bin/prettier 'src/**/*.{js,json,yml,yaml,md}'",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
-    "netlify": "node_modules/.bin/netlify",
-    "netlify-lambda": "node_modules/.bin/netlify-lambda",
-    "netlify:functions:install": "yarn netlify-lambda install src/lambda",
-    "netlify:functions:build": "yarn netlify-lambda build src/lambda",
     "test:e2e": "NODE_ENV=test jest --config=tests/e2e/.jest.config.js",
     "test:e2e:ci": "yarn test:e2e --ci --runInBand",
     "test:e2e:percy": "RUN_PERCY=true percy exec -- yarn test:e2e:ci",
