--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
+    "axios": "^0.19.0",
     "core-js": "^3.4.0",
     "faunadb": "^2.9.4",
     "js-yaml-loader": "^1.2.2",
