--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      - image: node:11.15.0
     steps:
       - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+          name: Yarn Install
+          command: npm install yarn -g
+      - run:
+          name: CI Tests
+          command: yarn test
