--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
 version: 2.1
 jobs:
   build:
+    working_directory: ~/mern-starter
     docker:
       - image: node:11.15.0
     steps:
+      - checkout
       - run:
           name: Yarn Install
           command: npm install yarn -g
