--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: node:11.15.0
+      - image: circleci/node:11.15.0
     steps:
       - checkout
       - run:
