--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,8 @@ jobs:
           name: List
           command: ls -la
       - run:
+          name: Yarn Install
+          command: yarn install
+      - run:
           name: CI Tests
           command: yarn test
