--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,18 @@ jobs:
       - image: circleci/node:11.15.0
     steps:
       - checkout
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
-          name: List
-          command: ls -la
-      - run:
-          name: Yarn Install
-          command: yarn install
+          name: Install Dependencies
+          command: yarn install --frozen-lockfile
+      - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
       - run:
           name: CI Tests
           command: yarn test
