--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,4 @@ jobs:
       - run: yarn test:vue
       - run: yarn test:unit:ci
       - run: yarn test:unit:coverage
+      - run: yarn test:e2e:ci
