--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "vue-template-compiler": "^2.6.10",
     "yaml-jest": "^1.0.5"
   },
+  "resolutions": {
+    "braces": "^2.3.1"
+  },
   "eslintConfig": {
     "root": true,
     "env": {
