Add yarn audit to ci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
+      - run: yarn audit
       - run: yarn build
       - run: yarn prettier:check
       - run: yarn test:lint
