--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@ryanwilke/feather-css": "^2.5.0",
-    "core-js": "^3.6.3",
+    "braces": "^3.0.2",
+    "core-js": "^3.6.4",
     "js-yaml-loader": "^1.2.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
-    "@percy/puppeteer": "^1.0.8",
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-router": "^4.1.1",
-    "@vue/cli-plugin-unit-jest": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@percy/puppeteer": "^1.1.0",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-plugin-router": "^4.2.2",
+    "@vue/cli-plugin-unit-jest": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
@@ -49,16 +50,16 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
-    "html-validate": "^2.12.0",
-    "html-validate-vue": "^2.3.4",
-    "husky": "^4.0.7",
+    "html-validate": "^2.14.0",
+    "html-validate-vue": "^2.6.0",
+    "husky": "^4.2.1",
     "jest": "^25.1.0",
     "jest-puppeteer": "^4.4.0",
     "jest-screenshot": "^0.2.2",
-    "lint-staged": "^9.5.0",
-    "netlify-cli": "^2.30.0",
+    "lint-staged": "^10.0.7",
+    "netlify-cli": "^2.32.0",
     "prettier": "^1.19.1",
-    "puppeteer": "^2.1.0",
+    "puppeteer": "^2.1.1",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-html-validate": "^1.2.1",
