--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "braces": "^3.0.2",
     "core-js": "^3.6.4",
     "js-yaml-loader": "^1.2.2",
+    "serialize-javascript": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -43,7 +44,7 @@
     "@vue/cli-plugin-router": "^4.2.2",
     "@vue/cli-plugin-unit-jest": "^4.2.2",
     "@vue/cli-service": "^4.2.2",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/test-utils": "1.0.0-beta.32",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
@@ -51,21 +52,21 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
     "html-validate": "^2.14.0",
-    "html-validate-vue": "^2.6.0",
+    "html-validate-vue": "^3.0.2",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "jest-puppeteer": "^4.4.0",
-    "jest-screenshot": "^0.2.2",
+    "jest-screenshot": "^0.3.0",
     "lint-staged": "^10.0.7",
     "netlify-cli": "^2.32.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "puppeteer": "^2.1.1",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-html-validate": "^1.2.1",
     "vue-cli-plugin-jest-puppeteer": "^0.1.4",
     "vue-cli-plugin-netlify-lambda": "^0.1.1",
-    "vue-svg-loader": "^0.15.0",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11",
     "yaml-jest": "^1.0.5"
   },
