--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           key: node-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install
         if: steps.cache.outputs.cache-hit != 'true'
-      - run: yarn audit
+      # - run: yarn audit # broken because of https://github.com/netlify/vue-cli-plugin-netlify-lambda/issues/17
       - run: yarn build
       - run: yarn prettier:check
       - run: yarn test:lint
