--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "resolutions": {
     "braces": "^2.3.1",
+    "minimist": "^1.2.2",
     "serialize-javascript": "^2.1.1"
   },
   "eslintConfig": {
